[tool.poetry]
name = "heroku-flask-helloworld"
version = "0.1.0"
description = ""
authors = ["wywsmail <wywsmail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "7.0"
flask = "1.0.2"
itsdangerous = "1.1.0"
jinja2 = "2.10.1"
markupsafe = "1.1.1"
werkzeug = "0.15.2"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
