[tool.poetry]
name = "heroku-flask-helloworld"
version = "0.1.0"
description = ""
authors = ["wywsmail <wywsmail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
gunicorn = "^22.0.0"
flask-restful = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
